# bayespcg

./: README.md  hello.py  pyproject.toml
demos/pcg/: bsp.py  cellular_automata.py  game_of_life.py
tutorials/: cellular_automata.py
